<resources>
    <string name="app_name">DemoVoteInfo</string>

    <!-- Home Screen -->
    <string name="main_header_title">জাতীয় সংসদ নির্বাচন ২০২৫</string>
    <string name="main_header_subtitle">শেরপুর-১ (সদর) আসন</string>
    <string name="button_voter_info">ভোটারের তথ্য</string>
    <string name="button_placeholder_1">নেতাকর্মীদের তথ্য</string>
    <string name="button_placeholder_2">প্রশাসন</string>
    <string name="button_placeholder_3">সাংবাদিক</string>
    <string name="button_placeholder_4">জরুরী সেবা </string>
    <string name="button_placeholder_5">অন্যান্য</string>
    <string name="main_logo_content_description">Main application logo</string>

    <!-- Voter List Screen -->
    <string name="title_activity_voter_list">ভোটকেন্দ্রের তালিকা</string>

    <!-- Voter Detail Screen -->
    <string name="title_activity_voter_detail">ভোটকেন্দ্রের বিবরণ</string>
    <string name="male_voters">পুরুষ ভোটার</string>
    <string name="female_voters">মহিলা ভোটার</string>
    <string name="third_gender_voters">হিজড়া ভোটার</string>
    <string name="total_voters">মোট ভোটার</string>
    <string name="contact_phone_n_a">Contact Phone: N/A</string>
</resources>